// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author renders first_name and last_name 1`] = `
<div
  className="di"
>
  <span>
    Full Name
  </span>
</div>
`;

exports[`Author renders first_name and last_name of editor 1`] = `
<div
  className="di"
>
  <span>
    Full Name
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
  <Tooltip
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    placement="top"
    title="editor"
    transitionName="zoom-big-fast"
  >
    (ed.)
  </Tooltip>
</div>
`;

exports[`Author renders first_name and last_name with affiliations 1`] = `
<div
  className="di"
>
  <span>
    Full Name
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
</div>
`;

exports[`Author renders first_name with last_name missing 1`] = `
<div
  className="di"
>
  <span>
    Name 
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
</div>
`;

exports[`Author renders full_name if first_name and last_name missing 1`] = `
<div
  className="di"
>
  <span>
    Name Full
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
</div>
`;

exports[`Author renders full_name with affiliations 1`] = `
<div
  className="di"
>
  <span>
    Name, Full
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
</div>
`;

exports[`Author renders full_name with first_name missing 1`] = `
<div
  className="di"
>
  <span>
    Name Full
  </span>
  <span
    className="pl1 secondary-color"
  >
    (
    <AuthorAffiliationList
      affiliations={
        Immutable.List [
          "Affiliation",
        ]
      }
    />
    )
  </span>
</div>
`;

exports[`Author renders linked author 1`] = `
<div
  className="di"
>
  <Link
    replace={false}
    to="/authors/12345"
  >
    Name, Full
  </Link>
</div>
`;

exports[`Author renders supervisor 1`] = `
<div
  className="di"
>
  <span>
    Name, Full
  </span>
  <Tooltip
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    placement="top"
    title="supervisor"
    transitionName="zoom-big-fast"
  >
    (supervisor)
  </Tooltip>
</div>
`;
